# scaldys-template

./: .gitignore  .python-version  AUTHORS  CHANGELOG  LICENSE  README.rst  compile.py  pyproject.toml
.github/workflows/: ci.yml  python-app.yml  python-publish.yml  release.yml
docs/manual/source/: authors.rst  changelog.rst  conf.py  index.rst  license.rst
docs/source/: authors.rst  conf.py  license.rst
docs/source/topics/: index.rst
licenses/: README.md  pytest.md  sphinx.md
packaging/windows/: add_bin_dir_to_path.bat  scaldys.iss  scaldys_commandline.bat  scaldys_powershell.ps1  windows_builder.py
src/: scaldys.py  scaldys_runner.py
src/extra_hooks/: hook_package.py
src/scaldys/: __about__.py  __init__.py  __main__.py
src/scaldys/cli/: __init__.py  cli.py  settings.py
src/scaldys/cli/commands/: __init__.py  arg_types.py  cmd_export.py  cmd_settings.py
src/scaldys/common/: __init__.py  app_location.py  app_logging.py  logging.py  sys_os.py
src/scaldys/core/: export.py
tests/: conftest.py  smoke_test.py  test_example.py
