[project]
name = "scaldys"
version = "0.0.1"
authors = [
  { name="scaldys", email="scaldyx@scaldys.net" },
]
description = "A template for Python projects managed by scaldys."
readme = "README.rst"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Utilities",
]
license = {file = "LICENSE"}
dependencies = [
    "platformdirs>=4.3.6",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.9.6",
    "setuptools>=75.8.0",
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=3.0.2",
]



