[project]
name = "scaldys"
version = "0.1.3"
authors = [
  { name="scaldys", email="scaldys@scaldys.net" },
]
description = "A skeleton for Python projects by Scaldys."
readme = "README.rst"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Utilities",
]
license = {file = "LICENSE"}
dependencies = [
    "platformdirs>=4.3.6",
    "typer>=0.15.1",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "pyright>=1.1.395",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.6",
    "setuptools>=75.8.0",
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=3.0.2",
]

[tool.setuptools]
license-files = []

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F403"]

[tool.pyright]
exclude = [".venv"]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"

#[[tool.uv.index]]
#name = "testpypi"
#url = "https://test.pypi.org/simple/"
#publish-url = "https://test.pypi.org/legacy/"
