[project]
name = "scaldys"
version = "0.2.0"
authors = [
  { name="scaldys", email="scaldys@scaldys.net" },
]
description = "A skeleton for Python projects by Scaldys."
readme = "README.rst"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Utilities",
]
license-files = ["LICEN[CS]E*"]
dependencies = [
    "platformdirs>=4.9.6",
    "typer>=0.25.0",
]

[project.scripts]
scaldys = "scaldys.cli.cli:app"

[build-system]
requires = ["setuptools", "cython"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "cython>=3.2.4",
    "pre-commit>=4.5.0",
    "pyright>=1.1.409",
    "pyinstaller>=6.20.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
    "setuptools>=82.0.1",
    "sphinx>=9.1.0",
    "sphinx-rtd-theme>=3.1.0",
    "rich>=15.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F403"]

[tool.pyright]
exclude = [".venv"]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"

#[[tool.uv.index]]
#name = "testpypi"
#url = "https://test.pypi.org/simple/"
#publish-url = "https://test.pypi.org/legacy/"
